# stm32f1_wfi_repro

./: Cargo.toml
src/: main.rs
